# scoundrel

./: .coveragerc  .gitignore  LICENSE  README.md  app.py  console.py  pylintrc  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
assets/translations/: manifest.txt
assets/translations/core/: de-DE.json  en-US.json
assets/translations/themes/fantasy/: de-DE.json
scoundrel/: builders.py  engine.py  exc.py  models.py
scoundrel/builders/: __init__.py  decks.py  flavor.py
scoundrel/engines/: __init__.py  rules.py
scoundrel/localization/: base.py  json.py  manifest.py
scoundrel/themes/: __init__.py  base.py  fantasy.py
scoundrel/ui/: app.py  cli.py  flow.py  models.py  room.py  sidebar.py  stream.py
tasks/: __init__.py  audit.py  config.py  game.py  linting.py
tests/behavior/: conftest.py  test_combat_behavior.py
tests/behavior/features/: combat.feature
tests/builder/: test_standard_builder.py
tests/builder/decks/: test_standard_builder.py
tests/engine/standard/: conftest.py  test_combat.py
tests/localization/: test_manifest.py
tests/localization/json/: test_dict_translator.py  test_json_registry.py
tests/model/: test_card_base.py  test_card_monster.py  test_card_potion.py  test_card_weapon.py  test_player.py
tests/models/: test_card_base.py  test_card_monster.py  test_card_potion.py  test_card_weapon.py  test_deck.py  test_deck_composition.py  test_equipped_weapon.py  test_game_state.py  test_player.py  test_room.py
tests/themes/: test_atlas_theme.py
tests/ui/: test_app.py  test_stream.py
(+7 files in other folders)
